# fastPlannerUAV

./: README.md
PX4-Autopilot/: CMakeLists.txt
PX4-Autopilot/cmake/configs/: nuttx_px4fmu-v2_default.cmake
PX4-Autopilot/dummy code/: offboard.cpp  offboard_att.cpp  offboard_sub.cpp
PX4-Autopilot/launch/: mavros_posix_sitl.launch  octomap_mapping_depth.launch  tf_camera.launch
PX4-Autopilot/scripts/: offboard.py
catkin_ws/devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
catkin_ws/devel/include/: nlopt.f  nlopt.h  nlopt.hpp
catkin_ws/devel/lib/: libglog.la  libglog.so.0  libglog.so.0.0.0  libnlopt_cxx.la
catkin_ws/logs/dron_basic/: build.check.012.log.stderr  build.check.013.log.stderr  build.check.014.log.stderr  build.make.012.log.stderr
catkin_ws/logs/glog_catkin/: build.make.000.log.stderr
catkin_ws/logs/gps_vio/: build.cmake.000.log.stderr
catkin_ws/logs/mav_trajectory_generation/: build.cmake.000.log.stderr  build.cmake.001.log.stderr  build.cmake.002.log.stderr  build.cmake.003.log.stderr  build.cmake.007.log.stderr
catkin_ws/logs/mav_trajectory_generation_ros/: build.make.000.log.stderr
catkin_ws/logs/mavlink/: build.make.000.log.stderr  (+1 more)
catkin_ws/src/: .rosinstall  .rosinstall.bak
catkin_ws/src/msg_check/: CMakeLists.txt  package.xml
catkin_ws/src/msg_check/include/msg_check/: msg_check.h
catkin_ws/src/msg_check/msg/: PlotDataMsg.msg
catkin_ws/src/msg_check/src/nodes/: msg_check_node.cpp  msg_check_node.h
fastplanner_ws/devel/: .catkin  setup.sh
(+2076 files in other folders)
